--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,17 @@
-.home {
+header {
+  // display: flex;
+  // align-items: center;
+  h1 {
+  }
+}
 
+.home {
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -58,4 +62,4 @@
       margin-bottom: 30px;
     }
   }
-}// home
+} // home
