--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
 // Navigation Styles here
+nav {
+  display: flex;
+  flex-flow: row;
+  //   justify-content: flex-end;
+  align-items: center;
+  h1 {
+    flex-grow: 2;
+    padding-left: 30px;
+  }
+  a {
+    font-size: 18px;
+    margin: 20px auto;
+    text-decoration: none;
+    color: black;
+    flex-grow: 1;
+  }
+}
