header an nav completed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,8 @@
 header {
-  // display: flex;
-  // align-items: center;
-  h1 {
+  border-bottom: 2px dashed @navigation-border;
+
+  h2 {
+    padding-top: 20px;
   }
 }
 
