--- a/css/index.css
+++ b/css/index.css
@@ -171,15 +171,16 @@ img {
 nav {
   display: flex;
   flex-flow: row;
+  justify-content: space-between;
   align-items: center;
+  padding: 20px 0;
+  border-bottom: 2px dashed #C0C0C0;
 }
 nav h1 {
   flex-grow: 2;
-  padding-left: 30px;
 }
 nav a {
-  font-size: 18px;
-  margin: 20px auto;
+  font-size: 16px;
   text-decoration: none;
   color: black;
   flex-grow: 1;
@@ -194,6 +195,12 @@ nav a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+header h2 {
+  padding-top: 20px;
 }
 .home .content-section {
   margin: 30px 0;
