--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,15 +2,18 @@
 nav {
   display: flex;
   flex-flow: row;
-  //   justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+  padding: 20px 0;
+  border-bottom: 2px dashed @navigation-border;
+
   h1 {
     flex-grow: 2;
-    padding-left: 30px;
   }
+
   a {
-    font-size: 18px;
-    margin: 20px auto;
+    font-size: 16px;
+    // margin: 20px auto;
     text-decoration: none;
     color: black;
     flex-grow: 1;
