--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,6 +61,11 @@ header {
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .button-style();
+        .border-button(20px);
+      }
     }
   }
 } // home
