--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins in here
+
+.border-button(@radius) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  border-radius: @radius;
+}
+
+.button-style() {
+  background-color: #17a2b8;
+  color: #ffffff;
+  padding: 15px 0;
+  text-align: center;
+  font-size: 20px;
+}
