done making the header responsive

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,16 @@
 header {
   border-bottom: 2px dashed @navigation-border;
 
+  .mobile-logo {
+    display: none;
+
+    @media @mobile {
+      display: block;
+      text-align: center;
+      padding-top: 15px;
+    }
+  }
+
   h2 {
     padding-top: 20px;
   }
