--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    padding: 0 25px;
+  }
+}
 nav {
   display: flex;
   flex-flow: row;
@@ -176,14 +181,29 @@ nav {
   padding: 20px 0;
   border-bottom: 2px dashed #c0c0c0;
 }
+@media (max-width: 500px) {
+  nav {
+    justify-content: space-around;
+  }
+}
 nav h1 {
   flex-grow: 2;
+}
+@media (max-width: 500px) {
+  nav h1 {
+    display: none;
+  }
 }
 nav a {
   font-size: 16px;
   text-decoration: none;
   color: black;
   flex-grow: 1;
+}
+@media (max-width: 500px) {
+  nav a {
+    flex-grow: 0;
+  }
 }
 .footer {
   width: 100%;
@@ -198,6 +218,16 @@ nav a {
 }
 header {
   border-bottom: 2px dashed #c0c0c0;
+}
+header .mobile-logo {
+  display: none;
+}
+@media (max-width: 500px) {
+  header .mobile-logo {
+    display: block;
+    text-align: center;
+    padding-top: 15px;
+  }
 }
 header h2 {
   padding-top: 20px;
